unpackaged/main/default/objects/engage_reports__Engage_Send__c/engage_reports__Engage_Send__c.object-meta.xml
<CustomObject>
    <label>Engage Send</label>
    <nameField>
        <label>Engage Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>