unpackaged/main/default/objects/engage_reports__Engage_Send__c/fields/engage_reports__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Composite_Key__c</fullName>
    <externalId>true</externalId>
    <label>Pardot Source Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>