unpackaged/main/default/objects/engage_reports__Engage_Send__c/fields/engage_reports__Engage_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Engage_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engage Email Template</label>
    <referenceTo>engage_reports__Engage_Email_Template__c</referenceTo>
    <relationshipLabel>Engage Sends</relationshipLabel>
    <relationshipName>Engage_Sends</relationshipName>
    <type>Lookup</type>
</CustomField>