unpackaged/main/default/objects/engage_reports__Engage_Send__c/fields/engage_reports__Sent_At__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Sent_At__c</fullName>
    <label>Sent At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>