unpackaged/main/default/objects/engage_reports__Engage_Send__c/fields/engage_reports__Total_Hard_Bounces__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Total_Hard_Bounces__c</fullName>
    <label>Total Hard Bounces</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>