unpackaged/main/default/objects/engage_reports__Engage_Send__c/fields/engage_reports__Type__c.field-meta.xml
<CustomField>
    <fullName>engage_reports__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engage Campaigns</fullName>
            </value>
            <value>
                <fullName>Engage for Outlook</fullName>
            </value>
            <value>
                <fullName>Engage for Gmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>